tests/invalid/runtime/io_read_size_invalid.pts
import Io;

function main() : void {
    var f = Io.openText("io_read_size.txt", "w");
    f.write("x");
    f.close();

    var r = Io.openText("io_read_size.txt", "r");
    r.read(0);
}
